--- a/style.css
+++ b/style.css
@@ -3,16 +3,9 @@
     background-color: aliceblue;
     padding: 20px;
 }
-.sidebar {
-    background-color: brown;
-}
-.header {
-    background-color: greenyellow;
-}
-.content {
-    background-color: aqua;
-}
-
+.sidebar { background-color: brown; }
+.header { background-color: greenyellow; }
+.content { background-color: aqua; }
 
 .container {
     display: grid;
@@ -31,4 +24,21 @@
 .content {
     grid-row: 2;
     grid-column: 2;
+}
+
+/*remove list gap and bullet properties*/
+.sidebar li { list-style-type: none; }
+.sidebar ul { margin: 0; padding: 0; }
+
+.sidebar {
+    display: grid;
+    grid-template-rows: 1fr 3fr 2fr 3fr;
+}
+.sidebar > * {
+    padding: 20px;
+    place-self: center start;
+}
+.sidebar ul {
+    display: grid;
+    gap: 20px;
 }
